# rotbotAi

./: README.md  core_agent_lines.sh  pyproject.toml
rotbot/: __init__.py  __main__.py
rotbot/channels/: __init__.py  base.py  cli_channel.py  discord_channel.py  signal_channel.py  telegram_channel.py
rotbot/cli/: __init__.py  agent.py  gateway.py  onboard.py  provider_cmd.py  status.py
rotbot/core/: __init__.py  bus.py  config.py  context.py  loop.py  memory.py  rag.py  session.py
rotbot/cron/: __init__.py  scheduler.py
rotbot/providers/: __init__.py  base.py  ollama.py  openai_compat.py
rotbot/shared/: __init__.py  access_store.py  context_analyzer.py  guardrails.py  think_parser.py
rotbot/skills/: __init__.py  loader.py
rotbot/skills/builtin/: github.md  weather.md
rotbot/tools/: __init__.py  base.py  file_ops.py  math_solver.py  mcp_client.py  rag_tool.py  shell.py  web_search.py
rotbot_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
workspace/: AGENTS.md  SOUL.md  USER.md
