[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rotbot-ai"
version = "0.1.0"
description = "rotbot - the open agent framework for every platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Harshit Saxena"},
]
keywords = ["ai", "agent", "chatbot", "llm", "ollama", "discord", "telegram", "signal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
discord = ["discord.py>=2.3.0", "yt-dlp>=2024.0.0", "PyNaCl>=1.5.0"]
telegram = ["pyTelegramBotAPI>=4.14.0"]
signal = []
search = ["duckduckgo-search>=4.0.0"]
math = ["sympy>=1.12"]
web = ["beautifulsoup4>=4.12.0", "playwright>=1.40.0", "PyPDF2>=3.0.0"]
all = [
    "rotbot-ai[discord]",
    "rotbot-ai[telegram]",
    "rotbot-ai[signal]",
    "rotbot-ai[search]",
    "rotbot-ai[math]",
    "rotbot-ai[web]",
]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0"]

[project.scripts]
rotbot = "rotbot.__main__:main"

[project.urls]
Homepage = "https://github.com/Harshit-Saxena/rotbotAi"
Repository = "https://github.com/Harshit-Saxena/rotbotAi"

[tool.setuptools.packages.find]
include = ["rotbot*"]
